--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* HEADER, NAV */
+
 .header {
   line-height: 80px;
   padding: 0 30px;
@@ -26,6 +28,8 @@
 .marker-icon {
   height: 32px;
 }
+
+/* MAP DESCRIPTION */
 .map-info {
   display: block;
   width: 100%;
@@ -41,6 +45,32 @@
   line-height: 25px;
 }
 
+/* MAP CONTAINER*/
+.map-container {
+  position: relative;
+}
+.search-box {
+  position: absolute;
+  z-index: 1;
+  right: 0;
+  margin: 20px 30px;
+  width: 100%;
+  max-width: 290px;
+}
+.search-input {
+  width: 100%;
+  font-size: 15px;
+  height: 30px;
+  background-color: #ffffff;
+  border: 1px solid #EA5959;
+  padding: 0 5px;
+  font-family: 'Cutive', serif;
+}
+.mappy {
+  background-color: #eee;
+}
+
+/* MAP WRAPPER */
 .wrapper {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
