create-map view has forms that don't work yet

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 .header {
   line-height: 80px;
   padding: 0 30px;
+  position: relative;
+  overflow: hidden;
 }
 
 .navgroup {
@@ -50,12 +52,10 @@
   position: relative;
 }
 .search-box {
-  position: absolute;
-  z-index: 1;
-  right: 0;
-  margin: 20px 30px;
+  margin: 0 30px;
   width: 100%;
   max-width: 290px;
+  float: right;
 }
 .search-input {
   width: 100%;
@@ -87,7 +87,7 @@
     font-family: sans-serif;
   }
   
-  .myButton {
+  /*.myButton {
     -moz-box-shadow: 0px 1px 0px 0px #fff6af;
     -webkit-box-shadow: 0px 1px 0px 0px #fff6af;
     box-shadow: 0px 1px 0px 0px #fff6af;
@@ -126,4 +126,4 @@
   .myButton:active {
     position:relative;
     top:1px;
-  }
+  }*/
