--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -4,6 +4,12 @@
 
 .navgroup__item a { 
 	text-decoration: none;
+  color: rgb(67,67,67);
+
+
+  &:hover {
+    color: rgba(67,67,67, .5);
+  }
 }
 
 /* HEADER, NAV */
